(executable
 (name test_cohttp)
 (modules test_cohttp)
 (libraries mem_usage uri cohttp-eio eio eio.core eio_main eio.unix))

(executable
 (name test_blink)
 (modules test_blink)
 (libraries mem_usage uri riot rio blink http))

(executable
  (name test_piaf)
  (modules test_piaf)
  (libraries mem_usage uri piaf eio eio_main eio.core))
